c2dascript-transpile/tests/snapshots/snapshots__transpile@alloca.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: cat tests/snapshots/alloca.das
---
options gen2

def c2da_min_int(a : int; b : int) : int {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int(a : int; b : int) : int {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint(a : uint; b : uint) : uint {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint(a : uint; b : uint) : uint {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_int64(a : int64; b : int64) : int64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int64(a : int64; b : int64) : int64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint64(a : uint64; b : uint64) : uint64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint64(a : uint64; b : uint64) : uint64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_clip_uint(v : int) : uint {
    if (v < 0) {
        return 0x0
    }
    if (v > 255) {
        return 0xff
    }
    return uint(v)
}
def c2da_bool_to_uint(v : bool) : uint {
    if (v) {
        return 0x1
    } else {
        return 0x0
    }
}
def c2da___assert_fail(expr : void?; file : void?; line : uint; func : void?) {
}
var TRUE : int = 1

[export]
def alloca_sum(var val1 : int; var val2 : int) : int {
    var alloca1 : int?
    var alloca2 : int?
    if (uint64(TRUE) != uint64(0)) {
        alloca1 = unsafe(unsafe(reinterpret<int?>(unsafe(unsafe(reinterpret<int?>(null))))))
        alloca1
        *alloca1 = val1
        *alloca1
    }
    if (uint64(TRUE) != uint64(0)) {
        alloca2 = unsafe(unsafe(reinterpret<int?>(unsafe(unsafe(reinterpret<int?>(null))))))
        alloca2
        *alloca2 = val2
        *alloca2
    }
    return int(*alloca1) + int(*alloca2)
}

[export] def main() : int {
    return 0
}
