c2dascript-transpile/tests/snapshots/snapshots__transpile@bitfields.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: cat tests/snapshots/bitfields.das
---
options gen2

def c2da_min_int(a : int; b : int) : int {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int(a : int; b : int) : int {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint(a : uint; b : uint) : uint {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint(a : uint; b : uint) : uint {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_int64(a : int64; b : int64) : int64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int64(a : int64; b : int64) : int64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint64(a : uint64; b : uint64) : uint64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint64(a : uint64; b : uint64) : uint64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_clip_uint(v : int) : uint {
    if (v < 0) {
        return 0x0
    }
    if (v > 255) {
        return 0xff
    }
    return uint(v)
}
def c2da_bool_to_uint(v : bool) : uint {
    if (v) {
        return 0x1
    } else {
        return 0x0
    }
}
def c2da___assert_fail(expr : void?; file : void?; line : uint; func : void?) {
}
struct PacketHeader {
    version : uint8
    type_0 : uint8
    flags : uint8
    sequence : int
    length : int
}
[export]
def test_bitfields() {
    var h : PacketHeader = PacketHeader(version = uint8(0), type_0 = 0, flags = 0, sequence = 0, length = 0)
    h.version = uint8(uint8(5))
    h.version
    h.sequence = int(513)
    h.sequence
    printf(unsafe(addr("version=%u sequence=%u
"[0])), int(h.version), h.sequence)
}

[export] def main() : int {
    return 0
}
